--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
-  <title>Домашняя</title>
+  <title>Sun team social</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=45657671"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4001285460" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=456293422" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -39,8 +39,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  </head>
  <body>
 
-  <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="ppu168"><!-- column -->
+  <div class="clearfix borderbox" id="page"><!-- column -->
+   <div class="position_content" id="page_position_content">
     <div class="clearfix colelem" id="pu168"><!-- group -->
      <div class="size_fixed grpelem" id="u168" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- custom html -->
       <pageItemHTML>
@@ -68,7 +68,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="clip_frame grpelem" id="u158"><!-- image -->
       <img class="block" id="u158_img" src="images/iphone-light-2.png?crc=3801461618" alt="" title="animate glideRight s6 d2" data-heightwidthratio="0.9446327683615819" data-image-width="885" data-image-height="836"/>
      </div>
-     <div class="clearfix grpelem" id="u372-9" title="animate glideRight s6 d4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <div class="clearfix grpelem" id="u372-9" title="animate glideRight s6 d3" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
       <p id="u372-2">•&nbsp; Получение прибыли за счет рекламы в размере 10 млн за 2 года</p>
       <p id="u372-4">•&nbsp; Повышение узнаваемости и имиджа бренда</p>
       <p id="u372-6">•&nbsp; Источник информации для аналитических и маркетинговых исследований</p>
@@ -156,23 +156,71 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p id="u544-12"><span class="ts1" id="u544-10">4</span><span class="ts1" id="u544-11">&nbsp; схема программных компонентов</span></p>
       <p id="u544-15"><span class="ts1" id="u544-13">5</span><span class="ts1" id="u544-14">&nbsp; краткое описание ролевой модели</span></p>
      </div>
-     <div class="clearfix grpelem" id="u692-6" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <div class="gradient grpelem" id="u711"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u692-6" title="animate glideLeft s10 d7" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
       <p id="u692">&nbsp;</p>
       <p id="u692-3">architecture</p>
       <p id="u692-4">&nbsp;</p>
      </div>
-     <div class="shadow gradient grpelem" id="u698" title="animate pulse infnite s5 d2"><!-- simple frame --></div>
+     <div class="clip_frame grpelem" id="u701"><!-- image -->
+      <img class="block" id="u701_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%203.png?crc=3990497875" alt="" title="animate glideUp s6 d2" data-heightwidthratio="0.6910112359550562" data-image-width="1424" data-image-height="984"/>
+     </div>
+     <div class="clip_frame grpelem" id="u714" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=-1,M12=0,M21=0,M22=-1,SizingMethod='auto expand')" data-mu-ie-matrix-dx="0" data-mu-ie-matrix-dy="0"><!-- image -->
+      <img class="block" id="u714_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%2062.jpg?crc=157693628" alt="" data-heightwidthratio="0.6088541666666667" data-image-width="1920" data-image-height="1169"/>
+     </div>
+     <div class="clearfix grpelem" id="u721-6" title="animate glideRight s8 d7" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+      <p id="u721">&nbsp;</p>
+      <p id="u721-3">схема&nbsp;&nbsp; КТС</p>
+      <p id="u721-4">&nbsp;</p>
+     </div>
+     <div class="clip_frame grpelem" id="u724"><!-- image -->
+      <img class="block" id="u724_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%204.png?crc=4148674928" alt="" title="animate glideUp s8 d3" data-heightwidthratio="0.7052186177715092" data-image-width="1418" data-image-height="1000"/>
+     </div>
     </div>
-    <div class="clip_frame colelem" id="u678"><!-- image -->
-     <img class="block" id="u678_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%207.jpg?crc=3893555524" alt="" data-heightwidthratio="0.6088541666666667" data-image-width="1920" data-image-height="1169"/>
+    <div class="clearfix colelem" id="pu734"><!-- group -->
+     <div class="clip_frame grpelem" id="u734" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=-1,M12=0,M21=0,M22=-1,SizingMethod='auto expand')" data-mu-ie-matrix-dx="0" data-mu-ie-matrix-dy="0"><!-- image -->
+      <img class="block" id="u734_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%206.jpg?crc=4053881891" alt="" data-heightwidthratio="0.6090768437338835" data-image-width="1939" data-image-height="1181"/>
+     </div>
+     <div class="clip_frame grpelem" id="u834"><!-- image -->
+      <img class="block" id="u834_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%2062.jpg?crc=157693628" alt="" data-heightwidthratio="0.6088541666666667" data-image-width="1920" data-image-height="1169"/>
+     </div>
+     <div class="clip_frame grpelem" id="u678"><!-- image -->
+      <img class="block" id="u678_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%207.jpg?crc=3893555524" alt="" data-heightwidthratio="0.6088541666666667" data-image-width="1920" data-image-height="1169"/>
+     </div>
+     <div class="clearfix grpelem" id="u744-7" title="animate glideDown s6 d2" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+      <p id="u744-2"><span class="ts" id="u744">Ролевая</span></p>
+      <p id="u744-4"><span class="ts" id="u744-3">модель</span></p>
+      <p id="u744-5">&nbsp;</p>
+     </div>
+     <div class="clip_frame grpelem" id="u747"><!-- image -->
+      <img class="block" id="u747_img" src="images/%d0%b3%d1%80%d1%83%d0%bf%d0%bf%d0%b0%2012.png?crc=3977430060" alt="" data-heightwidthratio="0.8598726114649682" data-image-width="471" data-image-height="405"/>
+     </div>
+     <div class="clip_frame grpelem" id="u780"><!-- image -->
+      <img class="block" id="u780_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%2052.png?crc=239209671" alt="" title="animate glideUp s8 d3" data-heightwidthratio="2.082627118644068" data-image-width="472" data-image-height="983"/>
+     </div>
+     <div class="clip_frame grpelem" id="u788"><!-- image -->
+      <img class="block" id="u788_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%2051.png?crc=4115644744" alt="" title="animate glideUp s6 d3" data-heightwidthratio="1.0869565217391304" data-image-width="575" data-image-height="625"/>
+     </div>
+     <div class="clip_frame grpelem" id="u795"><!-- image -->
+      <img class="block" id="u795_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%20522.png?crc=3936772115" alt="" title="animate glideUp s8 d3" data-heightwidthratio="0.6072727272727273" data-image-width="550" data-image-height="334"/>
+     </div>
+     <div class="clip_frame grpelem" id="u802"><!-- image -->
+      <img class="block" id="u802_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%2053.png?crc=485000948" alt="" title="animate glideUp s10 d5" data-heightwidthratio="1.0340909090909092" data-image-width="440" data-image-height="455"/>
+     </div>
+     <div class="clearfix grpelem" id="u844-9" title="animate glideRight s6 d2" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+      <p id="u844-2"><span class="ts" id="u844">Концептуальная</span></p>
+      <p id="u844-4"><span class="ts" id="u844-3">модель</span></p>
+      <p id="u844-6"><span class="ts" id="u844-5">Данных</span></p>
+      <p id="u844-7">&nbsp;</p>
+     </div>
+     <div class="clip_frame grpelem" id="u859"><!-- image -->
+      <img class="block" id="u859_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%2056.png?crc=4250600406" alt="" title="animate glideUp s10 d5" data-heightwidthratio="0.7777777777777778" data-image-width="1188" data-image-height="924"/>
+     </div>
     </div>
     <div class="clip_frame colelem" id="u685"><!-- image -->
      <img class="block" id="u685_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%207.jpg?crc=3893555524" alt="" data-heightwidthratio="0.6088541666666667" data-image-width="1920" data-image-height="1169"/>
     </div>
-   </div>
-   <div class="verticalspacer" data-offset-top="9063" data-content-above-spacer="9062" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-   <div class="clip_frame grpelem" id="u645"><!-- image -->
-    <img class="block" id="u645_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%203-crop-u645.png?crc=3999805931" alt="" title="animate glideUp s6 d2" data-heightwidthratio="0.7099184782608695" data-image-width="1472" data-image-height="1045"/>
+    <div class="verticalspacer" data-offset-top="10482" data-content-above-spacer="10482" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
   </div>
   <!-- JS includes -->
