--- a/инструкция-пользователя.html
+++ b/инструкция-пользователя.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Инструкция пользователя</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4190630540"/>
-  <link rel="stylesheet" type="text/css" href="css/__________-____________.css?crc=4172895573" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/__________-____________.css?crc=4160234890" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -707,10 +707,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
            <h1 id="u3111-10"><span class="ts2" id="u3111">Например это будет пост </span><span class="ts2" id="u3111-4">Павла Скурника<br/></span><span class="ts2" id="u3111-5">Обратите внимание у поста</span><span class="ts2" id="u3111-6"> </span><span class="ts2" title="contur" id="u3111-7">400</span><span class="ts2" id="u3111-8"> </span><span class="ts2" id="u3111-9">оценок</span></h1>
           </div>
           <div class="clip_frame grpelem" id="u3051"><!-- image -->
-           <img class="block" id="u3051_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%203.png?crc=414975527" alt="" width="663" height="1172"/>
+           <img class="block" id="u3051_img" src="images/sl2.png?crc=414975527" alt="" width="663" height="1172"/>
           </div>
           <div class="clip_frame grpelem" id="u3098"><!-- image -->
-           <img class="block" id="u3098_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%203.png?crc=414975527" alt="" width="663" height="1172"/>
+           <img class="block" id="u3098_img" src="images/sl2.png?crc=414975527" alt="" width="663" height="1172"/>
           </div>
           <div class="clip_frame grpelem" id="u3061"><!-- image -->
            <img class="block" id="u3061_img" src="images/%d0%b3%d1%80%d1%83%d0%bf%d0%bf%d0%b0%201%20(%d0%be%d0%b1%d1%8a%d0%b5%d0%b4%d0%b8%d0%bd%d0%b5%d0%bd%d0%bd%d0%be%d0%b5).png?crc=359588018" alt="" title="animate bar d7 s2" width="229" height="140"/>
@@ -719,7 +719,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
            <img class="block" id="u3069_img" src="images/%d0%b3%d1%80%d1%83%d0%bf%d0%bf%d0%b0%201%20(%d0%be%d0%b1%d1%8a%d0%b5%d0%b4%d0%b8%d0%bd%d0%b5%d0%bd%d0%bd%d0%be%d0%b5)2.png?crc=284609581" alt="" title="animate bar d5 s4" width="317" height="285"/>
           </div>
           <div class="clip_frame grpelem" id="u3088"><!-- image -->
-           <img class="block" id="u3088_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%204.png?crc=400885394" alt="" width="693" height="1225"/>
+           <img class="block" id="u3088_img" src="images/sl3.png?crc=400885394" alt="" width="693" height="1225"/>
           </div>
           <div class="clip_frame grpelem" id="u3121"><!-- image -->
            <img class="block" id="u3121_img" src="images/%d0%b3%d1%80%d1%83%d0%bf%d0%bf%d0%b0%202.png?crc=3819083048" alt="" title="animate bar d7 s2" width="1134" height="234"/>
@@ -728,7 +728,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
            <img class="block" id="u3140_img" src="images/%d0%b3%d1%80%d1%83%d0%bf%d0%bf%d0%b0%201%20(%d0%be%d0%b1%d1%8a%d0%b5%d0%b4%d0%b8%d0%bd%d0%b5%d0%bd%d0%bd%d0%be%d0%b5)2.png?crc=284609581" alt="" title="animate bar d5 s4" width="260" height="234"/>
           </div>
           <div class="clip_frame grpelem" id="u3147"><!-- image -->
-           <img class="block" id="u3147_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%205.png?crc=245305235" alt="" width="693" height="1225"/>
+           <img class="block" id="u3147_img" src="images/sl4.png?crc=245305235" alt="" width="693" height="1225"/>
           </div>
           <div class="clip_frame grpelem" id="u3166"><!-- image -->
            <img class="block" id="u3166_img" src="images/%d0%b3%d1%80%d1%83%d0%bf%d0%bf%d0%b0%201%20(%d0%be%d0%b1%d1%8a%d0%b5%d0%b4%d0%b8%d0%bd%d0%b5%d0%bd%d0%bd%d0%be%d0%b5)2.png?crc=284609581" alt="" title="animate bar d5 s4" width="252" height="227"/>
@@ -737,7 +737,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
            <img class="block" id="u3188_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%2062.png?crc=4193375771" alt="" width="659" height="1164"/>
           </div>
           <div class="clip_frame grpelem" id="u3193"><!-- image -->
-           <img class="block" id="u3193_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%207.png?crc=436141539" alt="" width="693" height="1225"/>
+           <img class="block" id="u3193_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%20227.png?crc=436141539" alt="" width="693" height="1225"/>
           </div>
           <div class="clearfix ose_pre_init grpelem" id="u3207-4"><!-- content -->
            <p id="u3207-2"><strong class="ts" id="u3207">05.</strong></p>
@@ -841,25 +841,25 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
-$('#u2763-4').registerOpacityScrollEffect([{"opacity":0,"fade":836,"in":[-Infinity,1172]},{"in":[1172,1172],"opacity":100},{"opacity":0,"fade":496,"in":[1172,Infinity]}]);/* scroll effect */
-$('#u3034-4').registerOpacityScrollEffect([{"opacity":0,"fade":836,"in":[-Infinity,1534.05]},{"in":[1534.05,1534.05],"opacity":100},{"opacity":0,"fade":496,"in":[1534.05,Infinity]}]);/* scroll effect */
-$('#u3131-4').registerOpacityScrollEffect([{"opacity":0,"fade":836,"in":[-Infinity,3620.05]},{"in":[3620.05,3620.05],"opacity":100},{"opacity":0,"fade":496,"in":[3620.05,Infinity]}]);/* scroll effect */
-$('#u3157-4').registerOpacityScrollEffect([{"opacity":0,"fade":836,"in":[-Infinity,4827.1]},{"in":[4827.1,4827.1],"opacity":100},{"opacity":0,"fade":496,"in":[4827.1,Infinity]}]);/* scroll effect */
-$('#u3232-4').registerOpacityScrollEffect([{"opacity":0,"fade":836,"in":[-Infinity,6799.8]},{"in":[6799.8,6799.8],"opacity":100},{"opacity":0,"fade":496,"in":[6799.8,Infinity]}]);/* scroll effect */
-$('#u3105-4').registerOpacityScrollEffect([{"opacity":0,"fade":836,"in":[-Infinity,2632.8]},{"in":[2632.8,2632.8],"opacity":100},{"opacity":0,"fade":496,"in":[2632.8,Infinity]}]);/* scroll effect */
-$('#u3035-4').registerOpacityScrollEffect([{"opacity":0,"fade":1031.85,"in":[-Infinity,1641.7]},{"in":[1641.7,1641.7],"opacity":100},{"opacity":0,"fade":496,"in":[1641.7,Infinity]}]);/* scroll effect */
-$('#u3134-4').registerOpacityScrollEffect([{"opacity":0,"fade":1031.85,"in":[-Infinity,3692.05]},{"in":[3692.05,3692.05],"opacity":100},{"opacity":0,"fade":496,"in":[3692.05,Infinity]}]);/* scroll effect */
-$('#u3160-4').registerOpacityScrollEffect([{"opacity":0,"fade":1031.85,"in":[-Infinity,4909.55]},{"in":[4909.55,4909.55],"opacity":100},{"opacity":0,"fade":496,"in":[4909.55,Infinity]}]);/* scroll effect */
-$('#u3235-4').registerOpacityScrollEffect([{"opacity":0,"fade":1031.85,"in":[-Infinity,6861.65]},{"in":[6861.65,6861.65],"opacity":100},{"opacity":0,"fade":496,"in":[6861.65,Infinity]}]);/* scroll effect */
-$('#u3108-6').registerOpacityScrollEffect([{"opacity":0,"fade":1031.85,"in":[-Infinity,2720.65]},{"in":[2720.65,2720.65],"opacity":100},{"opacity":0,"fade":496,"in":[2720.65,Infinity]}]);/* scroll effect */
-$('#u3037-12').registerOpacityScrollEffect([{"opacity":0,"fade":1012.9,"in":[-Infinity,1563.1]},{"in":[1563.1,1563.1],"opacity":50},{"opacity":0,"fade":637.75,"in":[1563.1,Infinity]}]);/* scroll effect */
-$('#u3137-5').registerOpacityScrollEffect([{"opacity":0,"fade":1012.9,"in":[-Infinity,3613.5]},{"in":[3613.5,3613.5],"opacity":50},{"opacity":0,"fade":637.75,"in":[3613.5,Infinity]}]);/* scroll effect */
-$('#u3163-10').registerOpacityScrollEffect([{"opacity":0,"fade":1012.9,"in":[-Infinity,4829.2]},{"in":[4829.2,4829.2],"opacity":50},{"opacity":0,"fade":637.75,"in":[4829.2,Infinity]}]);/* scroll effect */
-$('#u3238-10').registerOpacityScrollEffect([{"opacity":0,"fade":1012.9,"in":[-Infinity,6801.9]},{"in":[6801.9,6801.9],"opacity":50},{"opacity":0,"fade":637.75,"in":[6801.9,Infinity]}]);/* scroll effect */
-$('#u3220-4').registerOpacityScrollEffect([{"opacity":0,"fade":1012.9,"in":[-Infinity,6076.05]},{"in":[6076.05,6076.05],"opacity":50},{"opacity":0,"fade":637.75,"in":[6076.05,Infinity]}]);/* scroll effect */
-$('#u3111-12').registerOpacityScrollEffect([{"opacity":0,"fade":1012.9,"in":[-Infinity,2669.85]},{"in":[2669.85,2669.85],"opacity":0},{"opacity":0,"fade":637.75,"in":[2669.85,Infinity]}]);/* scroll effect */
-$('#u3207-4').registerOpacityScrollEffect([{"opacity":0,"fade":836,"in":[-Infinity,5884.05]},{"in":[5884.05,5884.05],"opacity":100},{"opacity":0,"fade":496,"in":[5884.05,Infinity]}]);/* scroll effect */
-$('#u3210-7').registerOpacityScrollEffect([{"opacity":0,"fade":1031.85,"in":[-Infinity,5983]},{"in":[5983,5983],"opacity":100},{"opacity":0,"fade":496,"in":[5983,Infinity]}]);/* scroll effect */
+$('#u2763-4').registerOpacityScrollEffect([{"fade":836,"in":[-Infinity,1172],"opacity":0},{"in":[1172,1172],"opacity":100},{"fade":496,"in":[1172,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3034-4').registerOpacityScrollEffect([{"fade":836,"in":[-Infinity,1534.05],"opacity":0},{"in":[1534.05,1534.05],"opacity":100},{"fade":496,"in":[1534.05,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3131-4').registerOpacityScrollEffect([{"fade":836,"in":[-Infinity,3620.05],"opacity":0},{"in":[3620.05,3620.05],"opacity":100},{"fade":496,"in":[3620.05,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3157-4').registerOpacityScrollEffect([{"fade":836,"in":[-Infinity,4827.1],"opacity":0},{"in":[4827.1,4827.1],"opacity":100},{"fade":496,"in":[4827.1,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3232-4').registerOpacityScrollEffect([{"fade":836,"in":[-Infinity,6799.8],"opacity":0},{"in":[6799.8,6799.8],"opacity":100},{"fade":496,"in":[6799.8,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3105-4').registerOpacityScrollEffect([{"fade":836,"in":[-Infinity,2632.8],"opacity":0},{"in":[2632.8,2632.8],"opacity":100},{"fade":496,"in":[2632.8,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3035-4').registerOpacityScrollEffect([{"fade":1031.85,"in":[-Infinity,1641.7],"opacity":0},{"in":[1641.7,1641.7],"opacity":100},{"fade":496,"in":[1641.7,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3134-4').registerOpacityScrollEffect([{"fade":1031.85,"in":[-Infinity,3692.05],"opacity":0},{"in":[3692.05,3692.05],"opacity":100},{"fade":496,"in":[3692.05,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3160-4').registerOpacityScrollEffect([{"fade":1031.85,"in":[-Infinity,4909.55],"opacity":0},{"in":[4909.55,4909.55],"opacity":100},{"fade":496,"in":[4909.55,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3235-4').registerOpacityScrollEffect([{"fade":1031.85,"in":[-Infinity,6861.65],"opacity":0},{"in":[6861.65,6861.65],"opacity":100},{"fade":496,"in":[6861.65,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3108-6').registerOpacityScrollEffect([{"fade":1031.85,"in":[-Infinity,2720.65],"opacity":0},{"in":[2720.65,2720.65],"opacity":100},{"fade":496,"in":[2720.65,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3037-12').registerOpacityScrollEffect([{"fade":1012.9,"in":[-Infinity,1563.1],"opacity":0},{"in":[1563.1,1563.1],"opacity":50},{"fade":637.75,"in":[1563.1,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3137-5').registerOpacityScrollEffect([{"fade":1012.9,"in":[-Infinity,3613.5],"opacity":0},{"in":[3613.5,3613.5],"opacity":50},{"fade":637.75,"in":[3613.5,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3163-10').registerOpacityScrollEffect([{"fade":1012.9,"in":[-Infinity,4829.2],"opacity":0},{"in":[4829.2,4829.2],"opacity":50},{"fade":637.75,"in":[4829.2,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3238-10').registerOpacityScrollEffect([{"fade":1012.9,"in":[-Infinity,6801.9],"opacity":0},{"in":[6801.9,6801.9],"opacity":50},{"fade":637.75,"in":[6801.9,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3220-4').registerOpacityScrollEffect([{"fade":1012.9,"in":[-Infinity,6076.05],"opacity":0},{"in":[6076.05,6076.05],"opacity":50},{"fade":637.75,"in":[6076.05,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3111-12').registerOpacityScrollEffect([{"fade":1012.9,"in":[-Infinity,2669.85],"opacity":0},{"in":[2669.85,2669.85],"opacity":0},{"fade":637.75,"in":[2669.85,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3207-4').registerOpacityScrollEffect([{"fade":836,"in":[-Infinity,5884.05],"opacity":0},{"in":[5884.05,5884.05],"opacity":100},{"fade":496,"in":[5884.05,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3210-7').registerOpacityScrollEffect([{"fade":1031.85,"in":[-Infinity,5983],"opacity":0},{"in":[5983,5983],"opacity":100},{"fade":496,"in":[5983,Infinity],"opacity":0}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
