--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <img class="block" id="u3270_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%207_poster_.png?crc=3908646393" alt="" title="animate rotate infinite s6" width="50" height="171"/>
          </div>
         </div>
-        <a class="nonblock nontext Button rounded-corners clearfix colelem" id="buttonu3381" href="%d0%b8%d0%bd%d1%81%d1%82%d1%80%d1%83%d0%ba%d1%86%d0%b8%d1%8f-%d0%bf%d0%be%d0%bb%d1%8c%d0%b7%d0%be%d0%b2%d0%b0%d1%82%d0%b5%d0%bb%d1%8f.html"><!-- container box --><div class="clearfix grpelem" id="u3382-4"><!-- content --><p id="u3382-2"><strong class="ts" id="u3382">ЧИТАТЬ ИНСТРУКЦИЮ</strong></p></div></a>
+        <a class="nonblock nontext Button rounded-corners clearfix colelem" id="buttonu3381" href="usermanual.html"><!-- container box --><div class="clearfix grpelem" id="u3382-4"><!-- content --><p id="u3382-2"><strong class="ts" id="u3382">ЧИТАТЬ ИНСТРУКЦИЮ</strong></p></div></a>
        </div>
       </div>
      </div>
