--- a/usermanual.html
+++ b/usermanual.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Usermanual</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4190630540"/>
-  <link rel="stylesheet" type="text/css" href="css/usermanual.css?crc=18108427" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/usermanual.css?crc=408800094" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -885,16 +885,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
       </div>
      </div>
-     <div class="browser_width grpelem" id="u3429-bw">
-      <div id="u3429"><!-- group -->
-       <div class="clearfix" id="u3429_align_to_page">
-        <div class="clearfix grpelem" id="u3251-7"><!-- content -->
-         <p>Удачного</p>
-         <p>использования <span id="u3251-4">:3</span></p>
-        </div>
-       </div>
-      </div>
-     </div>
      <div class="clip_frame grpelem" id="u3387"><!-- image -->
       <img class="block" id="u3387_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%2022222.png?crc=365912158" alt="" width="830" height="1467"/>
      </div>
@@ -913,37 +903,52 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="clip_frame grpelem" id="u3061"><!-- image -->
       <img class="block" id="u3061_img" src="images/%d0%b3%d1%80%d1%83%d0%bf%d0%bf%d0%b0%201%20(%d0%be%d0%b1%d1%8a%d0%b5%d0%b4%d0%b8%d0%bd%d0%b5%d0%bd%d0%bd%d0%be%d0%b5).png?crc=359588018" alt="" title="animate bar d7 s3" width="229" height="140"/>
      </div>
+     <div class="clip_frame grpelem" id="u3659"><!-- image -->
+      <img class="block" id="u3659_img" src="images/%d1%81%d0%bb%d0%be%d0%b9%201.jpg?crc=155464053" alt="" width="1920" height="1080"/>
+     </div>
     </div>
-    <div class="browser_width colelem" id="u3426-bw">
-     <div id="u3426"><!-- group -->
-      <div class="clearfix" id="u3426_align_to_page">
-       <div class="clearfix grpelem" id="pu2742-4"><!-- column -->
-        <div class="clearfix colelem" id="u2742-4"><!-- content -->
-         <p id="u2742-2"><strong class="ts" id="u2742">Design</strong></p>
-        </div>
-        <div class="clearfix colelem" id="u2916-4"><!-- content -->
-         <p id="u2916-2"><span class="ts2" id="u2916">Cront © 2018</span></p>
-        </div>
-        <div class="clip_frame colelem" id="u2753"><!-- image -->
-         <img class="block" id="u2753_img" src="images/%d0%b3%d1%80%d1%83%d0%bf%d0%bf%d0%b0%202%20%d0%ba%d0%be%d0%bf%d0%b8%d1%8f.png?crc=265293974" alt="" width="104" height="75"/>
-        </div>
-        <div class="clearfix colelem" id="pu2798"><!-- group -->
-         <a class="nonblock nontext clip_frame grpelem" id="u2798" href="https://vk.com/semengood"><!-- image --><img class="block" id="u2798_img" src="images/vk.png?crc=47144920" alt="" width="25" height="15"/></a>
-         <a class="nonblock nontext clip_frame grpelem" id="u2852" href="https://huntercront.github.io/port/"><!-- image --><img class="block" id="u2852_img" src="images/globe.png?crc=4154121802" alt="" width="18" height="19"/></a>
-         <a class="nonblock nontext clip_frame grpelem" id="u2861" href="https://github.com/huntercront"><!-- image --><img class="block" id="u2861_img" src="images/github.png?crc=103072348" alt="" width="18" height="19"/></a>
+    <div class="clearfix colelem" id="pu3429"><!-- group -->
+     <div class="browser_width grpelem" id="u3429-bw">
+      <div id="u3429"><!-- group -->
+       <div class="clearfix" id="u3429_align_to_page">
+        <div class="clearfix grpelem" id="u3251-7"><!-- content -->
+         <p>Удачного</p>
+         <p>использования <span id="u3251-4">:3</span></p>
         </div>
        </div>
-       <div class="clearfix grpelem" id="pu2913-5"><!-- group -->
-        <div class="clearfix grpelem" id="u2913-5"><!-- content -->
-         <p>watching</p>
-         <p>&nbsp;</p>
+      </div>
+     </div>
+     <div class="browser_width grpelem" id="u3426-bw">
+      <div id="u3426"><!-- group -->
+       <div class="clearfix" id="u3426_align_to_page">
+        <div class="clearfix grpelem" id="pu2742-4"><!-- column -->
+         <div class="clearfix colelem" id="u2742-4"><!-- content -->
+          <p id="u2742-2"><strong class="ts" id="u2742">Design</strong></p>
+         </div>
+         <div class="clearfix colelem" id="u2916-4"><!-- content -->
+          <p id="u2916-2"><span class="ts2" id="u2916">Cront © 2018</span></p>
+         </div>
+         <div class="clip_frame colelem" id="u2753"><!-- image -->
+          <img class="block" id="u2753_img" src="images/%d0%b3%d1%80%d1%83%d0%bf%d0%bf%d0%b0%202%20%d0%ba%d0%be%d0%bf%d0%b8%d1%8f.png?crc=265293974" alt="" width="104" height="75"/>
+         </div>
+         <div class="clearfix colelem" id="pu2798"><!-- group -->
+          <a class="nonblock nontext clip_frame grpelem" id="u2798" href="https://vk.com/semengood"><!-- image --><img class="block" id="u2798_img" src="images/vk.png?crc=47144920" alt="" width="25" height="15"/></a>
+          <a class="nonblock nontext clip_frame grpelem" id="u2852" href="https://huntercront.github.io/port/"><!-- image --><img class="block" id="u2852_img" src="images/globe.png?crc=4154121802" alt="" width="18" height="19"/></a>
+          <a class="nonblock nontext clip_frame grpelem" id="u2861" href="https://github.com/huntercront"><!-- image --><img class="block" id="u2861_img" src="images/github.png?crc=103072348" alt="" width="18" height="19"/></a>
+         </div>
         </div>
-        <div class="clip_frame grpelem" id="u2914"><!-- image -->
-         <img class="block" id="u2914_img" src="images/s.png?crc=4120520533" alt="" width="165" height="165"/>
-        </div>
-        <div class="clearfix grpelem" id="u2772-7"><!-- content -->
-         <p id="u2772-4"><span id="u2772">Thanks </span><span id="u2772-2">for</span><span id="u2772-3"></span></p>
-         <p>&nbsp;</p>
+        <div class="clearfix grpelem" id="pu2913-5"><!-- group -->
+         <div class="clearfix grpelem" id="u2913-5"><!-- content -->
+          <p>watching</p>
+          <p>&nbsp;</p>
+         </div>
+         <div class="clip_frame grpelem" id="u2914"><!-- image -->
+          <img class="block" id="u2914_img" src="images/s.png?crc=4120520533" alt="" width="165" height="165"/>
+         </div>
+         <div class="clearfix grpelem" id="u2772-7"><!-- content -->
+          <p id="u2772-4"><span id="u2772">Thanks </span><span id="u2772-2">for</span><span id="u2772-3"></span></p>
+          <p>&nbsp;</p>
+         </div>
         </div>
        </div>
       </div>
